[gd_scene load_steps=13 format=3 uid="uid://0iwpktjqcmmd"]

[ext_resource type="Script" path="res://Script/Crawler.gd" id="1_2nkpm"]
[ext_resource type="Texture2D" uid="uid://cmmro5b5ygvks" path="res://Art/Placeholder/Cube.png" id="2_2wk03"]
[ext_resource type="AudioStream" uid="uid://4dmc31wiuprl" path="res://Audio/Placeholder/CrawlerShoot.wav" id="2_qm3k3"]
[ext_resource type="AudioStream" uid="uid://cmpodswjpsace" path="res://Audio/Placeholder/Step.wav" id="3_o2dxg"]
[ext_resource type="Texture2D" uid="uid://bxabbbsx0f3ut" path="res://Art/Placeholder/Crawler/000.png" id="3_sou15"]
[ext_resource type="Texture2D" uid="uid://dden2e47ssdry" path="res://Art/Placeholder/Crawler/001.png" id="4_ake1y"]

[sub_resource type="Animation" id="Animation_fv6al"]
resource_name = "Hurt"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Crawler/Body:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 26)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Crawler/Body:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0987459, 0.00850429, 0.147455, -0.169858, -0.0987459, 0.00850429, 0.147455, -0.169858, 0.147455, -0.169858]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Crawler/Body:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.635, 0.28), Vector2(0.635, 0.365), Vector2(0.635, 0.28)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Crawler/LegR:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(13, 15.0281), Vector2(13, 10), Vector2(13, 15.0281)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Crawler/LegR:rotation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Crawler/LegL:position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-11, 9), Vector2(-11, 15), Vector2(-11, 9)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Crawler/LegL:rotation")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_sdyhc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Crawler/Body:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Crawler/Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 18.5281)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Crawler/LegR:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Crawler/LegR:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(13, 15.0281)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Crawler/LegL:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-11, 14.0281)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Crawler/LegL:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Crawler/Body:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.635, 0.635)]
}

[sub_resource type="Animation" id="Animation_ugrbp"]
resource_name = "Shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Crawler/Body:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.635, 0.22), Vector2(0.635, 0.85), Vector2(0.635, 0.635)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Crawler/Body:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 26), Vector2(0, 18.528)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Crawler/LegR:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.814218, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Crawler/LegL:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.916415, 0.0]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot_audio"
}]
}

[sub_resource type="Animation" id="Animation_yq2iy"]
resource_name = "Walk"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Crawler/Body:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0993717, 0.0, 0.0979586]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Crawler/Body:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 18.5281), Vector2(0, 23)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Crawler/LegR:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.814218, 0.669946, -0.814218, 0.669946]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Crawler/LegR:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(13, 18), Vector2(13, 18), Vector2(13, 18), Vector2(13, 18)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Crawler/LegL:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-11, 18), Vector2(-11, 18), Vector2(-11, 18), Vector2(-11, 18)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Crawler/LegL:rotation")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.916415, -0.982284, 0.916415, -0.982284]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Crawler/Body:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.635, 0.635)]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("..")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"step_audio"
}, {
"args": [],
"method": &"step_audio"
}, {
"args": [],
"method": &"step_audio"
}, {
"args": [],
"method": &"step_audio"
}, {
"args": [],
"method": &"step_audio"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_74672"]
_data = {
"Hurt": SubResource("Animation_fv6al"),
"RESET": SubResource("Animation_sdyhc"),
"Shoot": SubResource("Animation_ugrbp"),
"Walk": SubResource("Animation_yq2iy")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4qvbc"]
size = Vector2(64, 100)

[node name="Crawler" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_2nkpm")

[node name="Audio" type="Node2D" parent="."]

[node name="Shoot" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("2_qm3k3")

[node name="Step" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("3_o2dxg")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="Visuals"]
visible = false
modulate = Color(1, 0, 0.368627, 1)
scale = Vector2(2, 2)
texture = ExtResource("2_2wk03")

[node name="Crawler" type="Node2D" parent="Visuals"]

[node name="LegR" type="Sprite2D" parent="Visuals/Crawler"]
position = Vector2(13, 15.0281)
scale = Vector2(0.635, 0.635)
texture = ExtResource("3_sou15")
offset = Vector2(-29.2135, -60.6742)

[node name="LegL" type="Sprite2D" parent="Visuals/Crawler"]
position = Vector2(-11, 14.0281)
scale = Vector2(0.635, 0.635)
texture = ExtResource("3_sou15")
offset = Vector2(29.2135, -58.427)
flip_h = true

[node name="Body" type="Sprite2D" parent="Visuals/Crawler"]
position = Vector2(0, 18.5281)
scale = Vector2(0.635, 0.635)
texture = ExtResource("4_ake1y")
offset = Vector2(0, -58.427)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Visuals"]
speed_scale = 2.0
libraries = {
"": SubResource("AnimationLibrary_74672")
}
blend_times = [&"Walk", &"Hurt", 0.5, &"Walk", &"Shoot", 0.2, &"Shoot", &"Hurt", 0.5, &"Shoot", &"Walk", 0.5]

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -18)
shape = SubResource("RectangleShape2D_4qvbc")

[node name="CrawlTime" type="Timer" parent="."]
one_shot = true

[node name="PauseTime" type="Timer" parent="."]
one_shot = true

[node name="ShootPoint" type="Node2D" parent="."]
position = Vector2(0, -42)

[connection signal="timeout" from="CrawlTime" to="." method="_on_crawl_time_timeout"]
[connection signal="timeout" from="PauseTime" to="." method="_on_pause_time_timeout"]
